--- a/layouts/partials/cta_footer.html
+++ b/layouts/partials/cta_footer.html
@@ -1,6 +1,6 @@
 <button type="button" class="cta cta-on-black">
   Amazing story, keep me in the loop!
-  <div class="float-right mt-3px">
+  <div class="float-right mt-3px  mr-2px">
     <span aria-hidden="true" class="fa fa-pencil fa-cta-on-black"></span>
   </div>
 </button>
