--- a/layouts/partials/cta_header.html
+++ b/layouts/partials/cta_header.html
@@ -1,6 +1,6 @@
 <button type="button" class="cta cta-on-white mt-12">
   Wish me luck!
-  <div class="float-right mt-3px">
+  <div class="float-right mt-3px  mr-2px">
     <span aria-hidden="true" class="fa fa-pencil fa-cta-on-white"></span>
   </div>
 </button>
