--- a/layouts/partials/cta_link.html
+++ b/layouts/partials/cta_link.html
@@ -8,14 +8,14 @@
 {{ if eq .bg "black"  }}
 <a href="{{ .link }}" class="no-default cta cta-on-black mt-12">
   {{ .text }}
-  <div class="float-right mt-3px">
+  <div class="float-right mt-3px mr-2px">
     <span aria-hidden="true" class="fa fa-link fa-cta-on-black"></span>
   </div>
 </a>
 {{ else if eq .bg "white"}}
 <a href="{{ .link }}" class="no-default cta cta-on-white mt-12">
   {{ .text }}
-  <div class="float-right mt-3px">
+  <div class="float-right mt-3px mr-2px">
     <span aria-hidden="true" class="fa fa-link fa-cta-on-white"></span>
   </div>
 </a>
