--- a/src/css/main/split.css
+++ b/src/css/main/split.css
@@ -22,4 +22,24 @@
       theme('colors.black-main') 100%
     );
   }
+
+  .bg-header {
+    /* background: gray; */
+    position: relative;
+  }
+
+  .bg-header::before {
+    content: '';
+    position: absolute;
+    background:
+      linear-gradient(0deg, #22252D 0%, rgba(34, 37, 45, 0.9) 62.14%),
+      url('../../images/header_bruno.jpg');
+    background-size: cover;
+    background-position: left;
+    z-index: -1;
+    top: 0;
+    bottom: -5rem;
+    left: -5rem;
+    right: 50%;
+  }
 }
