--- a/layouts/partials/cta_footer.html
+++ b/layouts/partials/cta_footer.html
@@ -1,6 +1,6 @@
-<button type="button" class="cta cta-on-black">
-  Amazing story, keep me in the loop!
-  <div class="float-right mt-3px  mr-2px">
-    <span aria-hidden="true" class="fa fa-pencil fa-cta-on-black"></span>
-  </div>
+<button type="button" class="flex justify-between items-center w-full text-red-cta-on-black mt-8 xl:mt-0 border-solid border-b border-red-icon-on-black">
+  <span class="">Amazing story, keep me in the loop!</span>
+  <span class="w-icon mt-1 text-red-icon-on-black">
+    {{ partial "icon" (dict "icon" "solid/pencil-alt.svg") }}
+  </span>
 </button>
