--- a/layouts/partials/list_image.html
+++ b/layouts/partials/list_image.html
@@ -2,12 +2,14 @@
     Make sure that parent has position: relative
 
     CONTEXT
-    .bg
+    .bg     color of image background (desktop -> image inversely colored on mobile)
     .src
     .alt
+    .divClass
+    .imgClass
 */}}
-{{ $class := cond (eq .bg "white") "pl-14" "pb-1 pr-14" }}
-{{ $imgClass := cond (eq .bg "white") "shadow-on-white" "shadow-on-black" }}
-<div class="absolute top-0 right-0 bottom-0 left-0 pt-2 {{ $class }}">
-    <img class="object-cover w-full h-full {{ $imgClass }}" src="{{ .src }}" alt="{{ .alt }}">
+{{ $divClass := cond (eq .bg "white") "filter-black xl:pl-14" "filter-white xl:pr-14" }}
+{{ $imgClass := cond (eq .bg "white") "xl:shadow-on-white" "xl:shadow-on-black" }}
+<div class="absolute top-0 right-0 bottom-0 left-0 -z-1 {{ $divClass }} xl:filter-none {{ with .divClass }}{{ . }}{{ end }}">
+    <img class="object-cover w-full h-full {{ $imgClass }} {{ with .imgClass }}{{ . }}{{ end }}" src="{{ .src }}" alt="{{ .alt }}">
 </div>
