Add temporary notice for inactive links

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -23,7 +23,7 @@
             a change: for the coming weeks I will be
             brushing up my front-end skills and keep
             you posted on the journey.
-            <a href="#">
+            <a href="#" data-inactive>
               This is why...
             </a> #1week1page
           </p>
