--- a/layouts/partials/cta_footer.html
+++ b/layouts/partials/cta_footer.html
@@ -1,4 +1,4 @@
-<button type="button" class="flex justify-between items-center w-full text-red-cta-on-black mt-8 xl:mt-0 border-solid border-b border-red-icon-on-black">
+<button type="button" class="flex justify-between items-center w-full text-red-cta-on-black mt-8 xl:mt-0 border-solid border-b border-red-icon-on-black" data-inactive>
   <span class="">Amazing story, keep me in the loop!</span>
   <span class="w-icon mt-1 text-red-icon-on-black">
     {{ partial "icon" (dict "icon" "solid/pencil-alt.svg") }}
