--- a/layouts/partials/cta_header.html
+++ b/layouts/partials/cta_header.html
@@ -1,4 +1,4 @@
-<button type="button" class="flex justify-between items-center w-full text-red-cta-on-white mt-12  border-solid border-b border-red-icon-on-white">
+<button type="button" class="flex justify-between items-center w-full text-red-cta-on-white mt-12  border-solid border-b border-red-icon-on-white" data-inactive>
   <span class="">Wish me luck!</span>
   <span class="w-icon mt-1 text-red-icon-on-white">
     {{ partial "icon" (dict "icon" "solid/pencil-alt.svg") }}
