--- a/layouts/partials/cta_link.html
+++ b/layouts/partials/cta_link.html
@@ -11,14 +11,14 @@
 {{ $iconCommon := "w-icon mt-1 mx-2px" }}
 
 {{ if eq .bg "black"  }}
-<a href="{{ .link }}" class="{{ $linkCommon }} text-red-cta-on-black border-red-cta-on-black">
+<a href="{{ .link }}" class="{{ $linkCommon }} text-red-cta-on-black border-red-cta-on-black" data-inactive>
   <span class="{{ $textCommon }} order-2">{{ .text }}</span>
   <span class="{{ $iconCommon }} order-1 text-red-icon-on-black">
     {{ partial "icon" (dict "icon" "solid/link.svg" )}}
   </span>
 </a>
 {{ else if eq .bg "white"}}
-<a href="{{ .link }}" class="{{ $linkCommon }} text-red-cta-on-white border-red-cta-on-white">
+<a href="{{ .link }}" class="{{ $linkCommon }} text-red-cta-on-white border-red-cta-on-white" data-inactive>
   <span class="{{ $textCommon }}">{{ .text }}</span>
   <span class="{{ $iconCommon }} text-red-icon-on-white">
     {{ partial "icon" (dict "icon" "solid/link.svg" )}}
