--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,15 +7,15 @@
 
     <title>{{if ne .Page.Title .Site.Title }}{{ .Page.Title }} - {{ end }}{{ .Site.Title }}</title>
 
-    <link rel="preload" as="font" href="fonts/quicksand-latin-400.woff2" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" as="font" href="fonts/raleway-latin-400.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="/fonts/quicksand-latin-400.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="/fonts/raleway-latin-400.woff2" type="font/woff2" crossorigin="anonymous">
 
     {{ with .Site.Data.webpack.main.css }}
-      <link rel="stylesheet" href="{{ . }}">
+      <link rel="stylesheet" href="/{{ . }}">
     {{ end }}
 
     {{ with .Site.Data.webpack.main.js }}
-      <script defer src="{{ . }}" charset="utf-8"></script>
+      <script defer src="/{{ . }}" charset="utf-8"></script>
     {{ end }}
 
     {{ template "_internal/google_analytics_async.html" . }}
