--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -10,7 +10,7 @@
           <!-- image -->
           {{ $divClass := "xl:pr-remove xl:right-auto xl:w-6/12 xl:filter-header" }}
           {{ $imgClass := "object-left xl:shadow-remove" }}
-          {{ partial "list_image" (dict "bg" "black" "src" "images/header-bruno.jpg" "alt" "test image" "divClass" $divClass "imgClass" $imgClass ) }}
+          {{ partial "list_image" (dict "bg" "black" "src" "images/header-bruno.jpg" "alt" "test image" "divClass" $divClass "imgClass" $imgClass "paddingTop" false ) }}
         </div>
         <div class="xl:w-6/12 xl:pl-14">
           <p class="text-justify pt-12 xl:-mr-14">
