--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,6 +15,8 @@
 @import "main/bg-split.css";
 @import "main/line.css";
 @import "main/filter.css";
+@import "main/content.css";
+@import "main/toc.css";
 
 @responsive {
   .small-caps {
